@startuml

title __COMMON's Class Diagram__\n

  namespace com.example {
    namespace common {
      class com.example.common.BaseActivity {
          + setThread()
      }
    }
  }
  

  namespace com.example {
    namespace common {
      class com.example.common.BaseApplication {
          + onCreate()
      }
    }
  }
  

  namespace com.example {
    namespace common {
      class com.example.common.BaseEntity {
          {static} - SUCCESS_CODE : int
          - code : int
          - message : String
          + BaseEntity()
          + BaseEntity()
          + equals()
          + getCode()
          + getData()
          + getMessage()
          + hashCode()
          + isSuccess()
          + setCode()
          + setData()
          + setMessage()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.example {
    namespace common {
      class com.example.common.BaseFragment {
          + setThread()
      }
    }
  }
  

  namespace com.example {
    namespace common {
      enum ErrorCode {
        FORBIDDEN_ERROR
        NOT_FOUND_ERROR
        NOT_LOGIN_ERROR
        NO_AUTH_ERROR
        NO_USERNAME_ERROR
        OPERATION_ERROR
        PARAMS_ERROR
        PASSWORD_ERROR
        SAME_USERNAME_ERROR
        SUCCESS
        SYSTEM_ERROR
        TOKEN_DEFECT
        TOKEN_ILLEGAL
        TOKEN_TIME_LIMIT
        code
        message
      }
    }
  }
  

  com.example.common.BaseActivity -up-|> androidx.fragment.app.FragmentActivity
  com.example.common.BaseApplication -up-|> org.litepal.LitePalApplication
  com.example.common.BaseEntity o-- T : data
  com.example.common.BaseFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
